fix: flicker on hover effect in emoji selector

--- a/src/style/common/common.less
+++ b/src/style/common/common.less
@@ -32,3 +32,7 @@
   font-size: var(--font-size-xsmall);
   line-height: var(--line-height-sm);
 }
+
+.epr-emoji-category-content > button:hover {
+  background: transparent;
+}
